--- a/app/views/main.html
+++ b/app/views/main.html
@@ -52,8 +52,8 @@
 				<p><a id="contact" href="mailto:info@jug-montpellier.org">info@jug-montpellier.org</a></p>
 			</div>
 			<div>
-				<p><a id="contact" href="#w">Github</a></p>
-				<p><a id="contact" href="http://twitter.com/#!/montpellierjug" target="_blank">Twitter</a></p>
+				<p><a id="contact" href="http://github.com/Jug-Montpellier" target="_blank">Github</a></p>
+				<p><a id="contact" href="http://twitter.com/montpellierjug" target="_blank">Twitter</a></p>
 			</div>
 			<hr/>
 			<p class="credits">Contenus sous licence <a href="http://creativecommons.org/licenses/by/3.0/">CreativeCommons</a> — <a id="contact" href="#w">Crédits</a></p>
