--- a/app/views/Application/members.html
+++ b/app/views/Application/members.html
@@ -17,7 +17,11 @@
 			</div>
 			<div>
 			<h3><a href="@{Application.member(member.id)}">${member.fullName}</a>#{if (member.memberFct)} &nbsp; <span class="member-fonction">(${member.memberFct})</span>#{/if}</h3>
-			<span>${member.company}</span><br />
+			#{if (member.url)}
+				<span><a href="${member.url}" target="_blank">${member.company}</a></span><br />
+			#{/if}#{else}
+				<span>${member.company}</span><br />
+			#{/else}
 			${member.activity.nl2br()}
 			</div>
 		</article>
