Fix EN/FR in titles

--- a/app/views/Application/about.html
+++ b/app/views/Application/about.html
@@ -6,7 +6,7 @@
 #{/if}
 <section id="main">
 	<nav>
-		<h2>About us</h2>
+		<h2>A propos</h2>
 		<ul>
 			<li><a href="#about-us">Qu'est-ce qu'un JUG?</a></li>
 			<li><a href="#techno-java">Les technologies JAVA?</a></li>
@@ -14,7 +14,7 @@
 		</ul>
 	</nav>
 	<article>
-		<h2 id="about-us">About us</h2>
+		<h2 id="about-us">A propos</h2>
 		<h3>Qu'est-ce qu'un JUG?</h3>
 		<p>Un JUG (Java™ User Group) est une communauté indépendante, constituée en association sans but lucratif, qui rassemble les acteurs régionaux (industriels, universitaires, chercheurs, étudiants, recruteurs…) qui partagent un intérêt pour la technologie Java™. L’association réunit régulièrement ses membres pour échanger leurs idées, points de vue et expériences relatifs à cette technologie. Ces échanges peuvent prendre la forme de conférences, tables rondes, démonstrations, ateliers… selon l’intervenant et le sujet.</p>
 		<p>Ces réunions sont aussi l’occasion pour les participants de se rencontrer et nouer des nouveaux contacts autour du drink ou du buffet qui clôture traditionnellement les évènements d’un JUG.</p>
