--- a/app/views/Application/newsDetail.html
+++ b/app/views/Application/newsDetail.html
@@ -1,5 +1,5 @@
 #{extends 'main.html' /}
-#{set title:'News Detail' /}
+#{set title:'News: ' + news.title /}
 
 #{if event}
 	#{include 'Application/_eventHeader.html' /}
