Partners work, need API and display partner in event page

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -26,7 +26,7 @@
 			</nav>
 			#{doLayout /}
 			<section id="partners">
-				<h2>Partenaires</h2>
+				<h2><a href="@{Application.partners()}">Partenaires</a></h2>
 				<div class="partners-register">
 					<h3>Devenir sponsor?</h3>
 					<p>Venez nous rencontrer lors d'un évènement ou envoyez nous un email.</p>
