--- a/app/views/Application/partner.html
+++ b/app/views/Application/partner.html
@@ -13,9 +13,8 @@
 			<h2>${partner.name.capitalize()}</h2>
 			<p><a href="${partner.url}">${partner.url}</a></p>
 			<p>&nbsp;</p>
-			<p>
-			${partner.description.nl2br()}
-			</p>
+			#{if partner.logoURL}<p align="center"><img src="${partner.logoURL}"/></p>#{/if}
+			<p>${partner.description.nl2br()}</p>
 		</div>
 	</article>
 </section>
