--- a/app/views/main.html
+++ b/app/views/main.html
@@ -56,9 +56,10 @@
 				<p><a id="contact" href="mailto:info@jug-montpellier.org">info@jug-montpellier.org</a></p>
 			</div>
 			<div>
-				<h2>Ailleurs...</h2>
+				<h2>Communauté...</h2>
+				<p><a id="contact" href="http://twitter.com/montpellierjug" target="_blank">@montpellierjug</a></p>
+				<p><a id="contact" href="http://groups.google.com/group/jug-montpellier" target="_blank">Google group</a></p>
 				<p><a id="contact" href="http://github.com/Jug-Montpellier" target="_blank">Github</a></p>
-				<p><a id="contact" href="http://twitter.com/montpellierjug" target="_blank">Twitter</a></p>
 			</div>
 			<hr/>
 			<p class="credits">Contenus sous licence <a href="http://creativecommons.org/licenses/by/3.0/">CreativeCommons</a> — <a id="contact" href="#w">Crédits</a></p>
