Issue #11 : Comment on events

--- a/app/views/Application/_eventDetails.html
+++ b/app/views/Application/_eventDetails.html
@@ -87,6 +87,25 @@
 		    	</div>
 	    	#{/if}
     	</div>
+    	
+    	#{if event.old()}
+		<div id="disqus-comments">
+		<h2>Commentaires</h2>
+		<div id="disqus_thread"></div>
+		<script type="text/javascript">
+		    var disqus_url = '@@{Application.event(event.id)}';
+		    var disqus_identifier = 'event-${event.id}';
+		    var disqus_shortname = 'jugmontpellier';
+		    var disqus_developer = 1;
+		  (function() {
+		   var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+		   dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+		   (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+		  })();
+		</script>
+		<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript=jugmontpellier">comments powered by Disqus.</a></noscript>
+		</div>
+		#{/if}
 	</article>
 </section>
 
