--- a/app/views/Application/newsDetail.html
+++ b/app/views/Application/newsDetail.html
@@ -35,6 +35,25 @@
 		#{include 'Social/_twitterbutton.html' /}
 		</p>
 		</div>
+		
+		#{if news.comments}
+		<div id="disqus-comments">
+		<h2>Commentaires</h2>
+		<div id="disqus_thread"></div>
+		<script type="text/javascript">
+		    var disqus_url = '@@{Application.newsDetail(news.id)}';
+		    var disqus_identifier = 'news-${news.id}';
+		    var disqus_shortname = 'jugmontpellier';
+		    var disqus_developer = 1;
+		  (function() {
+		   var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+		   dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+		   (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+		  })();
+		</script>
+		<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript=jugmontpellier">comments powered by Disqus.</a></noscript>
+		</div>
+		#{/if}
 	</article>
 </section>
 
