Disqus goes to dev mode only when play is on dev mode

--- a/app/views/Application/newsDetail.html
+++ b/app/views/Application/newsDetail.html
@@ -44,7 +44,9 @@
 		    var disqus_url = '@@{Application.newsDetail(news.id)}';
 		    var disqus_identifier = 'news-${news.id}';
 		    var disqus_shortname = 'jugmontpellier';
+		    #{if play.mode.isDev()}
 		    var disqus_developer = 1;
+		    #{/if}
 		  (function() {
 		   var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
 		   dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
