Minor UI fix: - display speaker's photo - remove some text if no information is available (typically a talk with no tag doesn't need to display "Tag: -") - Bullet Proof : A talk does not need a speaker (typically a drink pause)

--- a/app/views/Application/_eventDetails.html
+++ b/app/views/Application/_eventDetails.html
@@ -41,15 +41,16 @@
 		<h2>Programme</h2>
 		#{list event.talks(), as : "talk"}
 			<h3>${talk.time} : ${talk.title}</h3>
-			<p>Tags:
 			#{if talk.getTags()}
+			<p>Tags:
 			#{list talk.getTags(), as : "tag"}
 			<a href="@{Application.listTagged(tag.name)}">${tag.name}</a>${tag_isLast ?'':', ' }
 			#{/list}
 			#{/if}
-			#{else}-#{/else}
 			</p>
-			<p>présenté par <span class="speaker">${talk.speaker.fullName}</span></p>
+			#{if talk.speaker}
+			<p>Présenté par <span class="speaker">${talk.speaker.fullName}</span></p>
+			#{/if}
 			<p>${talk.teaser}</p>
 		#{/list}
 
