--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -208,6 +208,14 @@ header {
 	color: #fff;
 }
 
+#speaker a {
+	color: #e5beb3;
+}
+
+#speaker a:hover {
+	color: #fff;
+}
+
 #presentation {
 	width: 580px;
 	margin: 20px 20px 60px;
@@ -415,6 +423,13 @@ article h3 {
     margin: 10px 0 10px;
 }
 
+#main article a {
+	color: #4A738C;
+}
+
+#main article a:hover {
+	color: #4A738C;
+}
 /*  -------------------------------- PARTNERS */
 #partners {
 	position: relative;
