--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -216,6 +216,40 @@ header {
 	color: #fff;
 }
 
+/* SPEAKERS TOP BOX DETAILS */
+#speakerstopbox {
+	position: relative;
+	margin: 50px auto 20px;
+	background: #EEE;
+	color: #fff;
+	-webkit-box-shadow: 5px 5px 0 rgba(0,0,0,.3);
+	-moz-box-shadow: 5px 5px 0 rgba(0,0,0,.3);
+	box-shadow: 5px 5px 0 rgba(0,0,0,.3);
+}
+
+#speakerstopbox h2 {
+	color: #4A738C;
+	text-shadow: 1px 1px 0 rgba(0,0,0,.3);
+	text-decoration: none;
+	padding: 10px;
+	margin: 0 0 -10px;
+}
+
+#speakerstopbox p {
+	color: #444;
+	text-decoration: none;
+	padding: 10px;
+	margin: 0 0 -10px;
+}
+
+#speakerstopbox a {
+	color: #fff;
+}
+#speakerstopbox a:hover {
+	color: #fff;
+}
+/* END SPEAKERS DETAILS */
+
 #presentation {
 	width: 580px;
 	margin: 20px 20px 60px;
