--- a/app/views/Inscription/_inscription.html
+++ b/app/views/Inscription/_inscription.html
@@ -81,12 +81,12 @@
 			<input type="text" size="20" value="" name="subscribeEmail" id="registrationEmail">
 			<span class="error">${errors.forKey('subscribeEmail')}</span>
 			<span class="help">
-				Veuillez saisir une adresse email valide. Un emai de confirmation
+				Veuillez saisir une adresse email valide. Un email de confirmation
 				vous serra envoyé avec toutes les informations nécessaires
 			</span>
 		</p>
 		<p>
-			<label class="required">Êtes-vous humain ?</label>
+			<label class="required">Êtes-vous humain?</label>
 			<input id="subscribe_captcha" type="text" size="20" value="" name="subscribeCaptcha">
 			<input name="randomId" type="hidden" value="${randomId}">
 			<span class="error">${errors.forKey('subscribeCaptcha')}</span>
