[Evo] add Oxiane logo to main view

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -30,8 +30,11 @@
 					<p>Venez nous rencontrer lors d'un évènement ou envoyez nous un email.</p>
 				</div>
 				<ul class="partners-list">
-					<li><a href="http://www.playapps.net/" target="_blank"><img src="http://www.playframework.org/public/images/playapps.png" height="76" witdh="186" /></a></li>
-					<li><a href="http://www.epitech.eu/ecole-informatique-montpellier-languedoc-roussillon/" target="_blank"><img src="http://www.epitech.eu/images/design/logo-epitech.jpg"/></a></li>
+					<li>
+                                            <a href="http://www.playapps.net/" target="_blank"><img src="http://www.playframework.org/public/images/playapps.png" height="76" witdh="186" /></a>
+					    <a href="http://www.epitech.eu/ecole-informatique-montpellier-languedoc-roussillon/" target="_blank"><img src="http://www.epitech.eu/images/design/logo-epitech.jpg"/></a>
+                                        </li>
+                                        <li><a href="http://www.oxiane.com" target="_blank"><img src="@{'/public/images/sponsoring/Oxiane-mediterranee-logo_01.jpg'}" height="76" witdh="186"/></a></li>
 				</ul>
 			</section>
 		</div>
