--- a/app/views/main.html
+++ b/app/views/main.html
@@ -36,7 +36,9 @@
 					#{list yearpartners, as : "partner"}
 					<li><a href="@{Application.partner(partner.id)}"><img src="${partner.logoURL}"/></a></li>
 					#{/list}
+				    <div class="clear"></div>	
 				</ul>
+			     
 			</section>
 		</div>
 		<footer>
