--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -504,14 +504,31 @@ article h3 {
 .partners-list {
 	background: #fff;
 	position: relative;
+	text-align:center;
 	top: 10px;
 	left: -10px;
 	width: 580px;
 	padding: 20px;
-	float: right;
 	-webkit-box-shadow: 5px 5px 0 rgba(0,0,0,.3);
 	-moz-box-shadow: 5px 5px 0 rgba(0,0,0,.3);
 	box-shadow: 5px 5px 0 rgba(0,0,0,.3);
+}
+
+.partners-list li {
+    float:left;
+    width:275px;
+    height:100px;
+    margin-right:10px;
+    margin-top:7px;
+}
+
+.partners-list img {
+    max-width: 275px;
+    max-height: 100px;
+}
+
+.clear {
+    clear: both;
 }
 
 .partners-register {
